--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
+title: Minh Smith # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  PH.D. Student
   <br><br>
-  Second description 
+  Computer Science Departement, Auburn University
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/minh-smith-a9aa0649/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
